deploy: 392f48f1478573febae1462c4da49c0c0d22e0e1

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ jsdrink does not depend on non-standard libraries except dev-dependencies.</p>
 <a href="#documentation" id="documentation" style="color: inherit; text-decoration: none;">
   <h2>Documentation</h2>
 </a>
+<p>See <a href="https://cordx.net/jsdrink/">https://cordx.net/jsdrink/</a>.</p>
 
 <a href="#example" id="example" style="color: inherit; text-decoration: none;">
   <h2>Example</h2>
