--- a/classes/index.ParseSuccess.html
+++ b/classes/index.ParseSuccess.html
@@ -20,7 +20,7 @@ the remaining data.</p>
 <p>The type parameter T appears in the parsed field.
 The type of the parsed field is T.
 The parsed field may be null (e.g. Optional function
-may return a ParseResult where the Parsed field is nil).</p>
+may return a ParseResult where the Parsed field is null).</p>
 <p>The Remain field is the remainder of the parsed input.</p>
 </div></section> 
 <section class="tsd-panel tsd-type-parameters">
@@ -33,7 +33,7 @@ may return a ParseResult where the Parsed field is nil).</p>
 <ul class="tsd-hierarchy">
 <li><span class="target">ParseSuccess</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/26ebdc6/src/jsdrink.ts#L19">jsdrink.ts:19</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/392f48f/src/jsdrink.ts#L19">jsdrink.ts:19</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -71,19 +71,19 @@ may return a ParseResult where the Parsed field is nil).</p>
 <h5>remain: <a href="../types/index.ParseInput.html" class="tsd-signature-type" data-tsd-kind="Type alias">ParseInput</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="index.ParseSuccess.html" class="tsd-signature-type" data-tsd-kind="Class">ParseSuccess</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/26ebdc6/src/jsdrink.ts#L20">jsdrink.ts:20</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/392f48f/src/jsdrink.ts#L20">jsdrink.ts:20</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="parsed" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>parsed</span><a href="#parsed" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">parsed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/26ebdc6/src/jsdrink.ts#L21">jsdrink.ts:21</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/392f48f/src/jsdrink.ts#L21">jsdrink.ts:21</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="remain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>remain</span><a href="#remain" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">remain<span class="tsd-signature-symbol">:</span> <a href="../types/index.ParseInput.html" class="tsd-signature-type" data-tsd-kind="Type alias">ParseInput</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/26ebdc6/src/jsdrink.ts#L22">jsdrink.ts:22</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/392f48f/src/jsdrink.ts#L22">jsdrink.ts:22</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
