--- a/types/index.ParseResult.html
+++ b/types/index.ParseResult.html
@@ -20,8 +20,8 @@ the remaining bytes.
 Parser should return ParseResult.</p>
 <p>The type parameter T appears in the Parsed field.
 The type of the Parsed field is a pointer of T.
-The Parsed field may be nil (e.g. Optional function
-may return a ParseResult where the Parsed field is nil).</p>
+The Parsed field may be null (e.g. Optional function
+may return a ParseResult where the Parsed field is null).</p>
 <p>The Remain field is the remainder of the parsed input.</p>
 </div>
 <h4 class="tsd-type-parameters-title">Type Parameters</h4>
@@ -31,7 +31,7 @@ may return a ParseResult where the Parsed field is nil).</p>
 <li>
 <h4>T</h4></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/26ebdc6/src/jsdrink.ts#L38">jsdrink.ts:38</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/cordx56/jsdrink/blob/392f48f/src/jsdrink.ts#L38">jsdrink.ts:38</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
